# stock-agent

./: .env.example  .gitignore  Agent.md  README.md  design_draft.md  pyproject.toml
app/: __init__.py  agent.py  alert_config.py  database.py  kakao_auth.py  kakao_notify.py  main.py  market_data.py  models.py  repositories.py  routes.py  scheduler.py  scheduler_config.py  schemas.py  services.py  settings.py  trading_window.py
app/templates/: index.html  kakao_callback.html
design/: domain_model.md  electron_ui_component_design.md  implementation_plan.md  kakao_notification_design.md  kakao_use_case.drawio  mvp_system_design.md  scheduler_design.md  scheduler_pr_description.md  scheduler_use_case.drawio
desktop-demo/: README.md  main.js  package-lock.json  package.json  preload.js
desktop-demo/src/: index.html  renderer.js  styles.css
docs/: kakao_setup_guide.md
scripts/: dev.ps1
tests/: conftest.py  test_api.py  test_scheduler.py
